# sts2

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml  schema.sql
.github/workflows/: docker.yml
site/: index.html
src/sts2/: __init__.py  config.py  database.py  history.py  main.py  models.py
src/sts2/routers/: runs.py
tests/: conftest.py  test_runs.py
tests/data/history/: 1772751525.run  1772758075.run  1772803973.run  1772842056.run  1772842753.run  1772843295.run  1772846247.run  1772847901.run  1772849892.run  1772850829.run  1772917501.run  1772923677.run  1772980736.run  1772981451.run  1772981936.run  1772984323.run  1773013984.run  1773014846.run  1773015932.run  1773090315.run  1773090820.run  1773091424.run  1773091801.run  1773092499.run  1773093634.run  1773099357.run  1773106552.run  1773109149.run  1773109473.run  1773111091.run  1773112447.run  1773113877.run  1773114285.run  1773173559.run  1773190560.run  1773191394.run  1773192635.run  1773193417.run  1773193877.run  1773259094.run  (+115 more)
web/: astro.config.mjs  package-lock.json  package.json
web/src/pages/: index.astro
web/src/styles/: global.css
