[project]
name = "sts2"
version = "0.1.0"
description = "Stats website for Slay the Spire 2"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"
